Timeline 0.11.1, released on 24 October 2010
============================================

This is a translation update and bugfix release.

Bug fixes:

  * Create event through menu does not raise exception
  * Time removed when saving event and 'Show time' not checked

Timeline 0.11.0, released on 12 October 2010
============================================

This is a new feature release.

New features, enhancements:

  * New improved date and time entry control
  * New navigation function: fit millennium

Bug fixes:

  * Remove import of wx.lib.wordwrap that caused a crash on Ubuntu

New translations:

  * Italian
  * Turkish

Timeline 0.10.2, released on 11 June 2010
=========================================

This is a translation update and bugfix release.

Bug fixes:

  * "Add more events after this one" does not give error message when ticked
    in the create event dialog
  * Do not write empty displayed_period tag to xml file
  * Prevent application from crashing with wxPython version 2.8.11.0

Timeline 0.10.1, released on 25 May 2010
========================================

This is a translation update release.

New translations:

  * Polish
  * French

Timeline 0.10.0, released on 9 May 2010
=======================================

This is a new feature release.

New features, enhancements:

  * Switch to XML-based file format for storing timeline data
  * Support hierarchical categories
  * Function to duplicate events according to a pattern
  * More user friendly error when application crashes
  * Save window position
  * More shortcuts for navigation commands
  * Selected event gets highlighted line

Bug fixes:

  * Application shows error message in category editor instead of crashing

Timeline 0.9.0, released on 7 February 2010
===========================================

This is a new minor feature and bugfix release.

New features, enhancements:

  * Timeline scrolls when creating period events, resizing events, and moving
    events