@@ -1,4 +1,4 @@
-.TH timeline "1" "October 2010" "0.12.0" "User Commands"
+.TH timeline "1" "January 2011" "0.12.0" "User Commands"
 .SH NAME
 
 timeline \- display and navigate events on a timeline
