@@ -24,10 +24,12 @@ import os.path
 import unittest
 import gettext
 import doctest
+import locale
 
 def execute_all_specs():
     setup_paths()
     enable_gettext()
+    setup_locale()
     suite = create_suite()
     all_pass = execute_suite(suite)
     return all_pass
@@ -42,6 +44,10 @@ def enable_gettext():
     from timelinelib.about import APPLICATION_NAME
     from timelinelib.paths import LOCALE_DIR
     gettext.install(APPLICATION_NAME.lower(), LOCALE_DIR, unicode=True)
+
+def setup_locale():
+    # Some specs depend on locale being en_us (date parsing for example)
+    locale.setlocale(locale.LC_ALL, "en_US")
 
 def create_suite():
     def add_spec_from_module(suite, module_name):
