@@ -1,3 +1,6 @@
+Timeline 0.12.0, released on 9 January 2011
+===========================================
+
 Timeline 0.11.1, released on 24 October 2010
 ============================================
 
